Modify layout bug

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,25 +10,25 @@ $theme-color: #182335;
 $light-color: #414D62;
 
 body {
-    font-family:  "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, Meiryo, sans-serif;
+    font-family:  "Hiragino Kaku Gothic ProN", YuGothic, Meiryo, sans-serif;
     font-size: $body-font-size;
 
     background-color: $light-color;
-    
-    #container {
+
+    .container {
         height: auto;
     }
 }
 
 .main-image {
-    background-image: url("bg.png");
+    background-image: url("../images/bg.png");
     // background-attachment: fixed;
     background-position-y: -150px;
-    background-position-x: center; 
+    background-position-x: center;
     background-size: 100% auto;
     width: 100%;
     height: 350px;
-    
+
     .mask {
         widows: 100%;
         height: 100%;
@@ -40,7 +40,7 @@ body {
     // min-height: 95%;
     width: 100%;
     height: 100%;
-    background-color: #DDD;    
+    background-color: #DDD;
     overflow: hidden;
 }
 
@@ -49,13 +49,13 @@ body {
     margin: 0 auto;
     padding: $container-padding;
     overflow: hidden;
-    
+
     .contents {
         h2, h3 {
             font-weight: bold;
         }
 
-        h2 {
+h2 {
             font-size: 18px;
             color: $dark-color;
             border-left: 5px solid $light-color;
@@ -64,7 +64,7 @@ body {
             margin-bottom: 10px;
             letter-spacing: 2px;
         }
-        
+
         .main-text {
             margin-bottom: 20px;
         }
@@ -75,13 +75,13 @@ body {
     width: 100%;
     height: 60px;
     background-color: $dark-color;
-    
+
     .logo {
         text-align: center;
         font-size: 20px;
         font-weight: bold;
         float: left;
-        
+
         padding-left: 30px;
         padding-top: 22px;
 
@@ -92,7 +92,7 @@ body {
     }
 
     .menu {
-        padding-left: 150px; 
+        padding-left: 150px;
         padding-top: 30px;
 
         ul {
@@ -100,22 +100,22 @@ body {
                 height: 25px;
                 text-align: center;
                 list-style-type: none;
-                display: inline-block; // 横並び
+                display: inline-block;
                 width: 100px;
-                
+
                 .selected {
                     border-bottom: 5px solid $theme-color;
                 }
-                
+
                 a {
                     font-size: 14px;
                     font-weight: bold;
                 }
-                
+
                 a:first-letter {
                     font-size: 17px;
                     margin-right: 1px;
-                }            
+                }
             }
         }
     }
